// Vitest Snapshot v1

exports[`<PersonalDetailsForm> > Renders with errors 1`] = `
<div>
  <form
    data-testid="personal_details-form"
    novalidate=""
  >
    <h2
      class="_title_8a9484"
    >
      personal_details.title
    </h2>
    <div
      class="_formFeedback_99f247 _error_99f247"
    >
      This is a form error
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_firstName"
      >
        personal_details.fist_name
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_firstName"
          name="firstName"
          placeholder="personal_details.fist_name"
          required=""
          type="text"
          value="Vince"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        this is wrong
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_lastName"
      >
        personal_details.last_name
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_lastName"
          name="lastName"
          placeholder="personal_details.last_name"
          required=""
          type="text"
          value="Guy"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        also this
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_companyName"
      >
        personal_details.company_name
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_companyName"
          name="companyName"
          placeholder="personal_details.company_name"
          type="text"
          value="JW Player"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        So much errors
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_address"
      >
        personal_details.address
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_address"
          name="address"
          placeholder="personal_details.address"
          required=""
          type="text"
          value="123 Nowhere St."
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Do you know where you live
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_address2"
      >
        personal_details.address2
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_address2"
          name="address2"
          placeholder="personal_details.address2"
          type="text"
          value="Apt 1W"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Come on
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_city"
      >
        personal_details.city
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_city"
          name="city"
          placeholder="personal_details.city"
          required=""
          type="text"
          value="Chicago"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        stop it
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_state"
      >
        personal_details.state
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_state"
          name="state"
          placeholder="personal_details.state"
          required=""
          type="text"
          value="IL"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Confusion
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_postCode"
      >
        personal_details.post_code
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_postCode"
          name="postCode"
          placeholder="personal_details.post_code"
          required=""
          type="text"
          value="60601"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Post Code should be 5 centimeters
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_phoneNumber"
      >
        personal_details.phone_number
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_phoneNumber"
          name="phoneNumber"
          placeholder="personal_details.phone_number"
          required=""
          type="text"
          value="+1 555 555 5555"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Invalid
      </div>
    </div>
    <div
      class="_dateField_eb6974 _error_eb6974"
    >
      <label
        class="_label_eb6974"
        for="text-field_1235_birthDate"
      >
        personal_details.birth_date
      </label>
      <div
        class="_container_eb6974"
      >
        <input
          class="_input_eb6974"
          id="text-field_1235_birthDate"
          maxlength="2"
          name="date"
          placeholder="dd"
          type="number"
          value="27"
        />
         / 
        <input
          class="_input_eb6974"
          id="text-field_1235_birthDate"
          maxlength="2"
          name="month"
          placeholder="mm"
          type="number"
          value="2"
        />
         / 
        <input
          class="_input_eb6974"
          id="text-field_1235_birthDate"
          maxlength="4"
          name="year"
          placeholder="yyyy"
          type="number"
          value="1985"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        February 30th? Really?
      </div>
    </div>
    <div
      class="_container_bb73c6 _fullWidth_bb73c6 _error_bb73c6 _medium_bb73c6"
    >
      <label
        class="_label_bb73c6"
        for="1235"
      >
        Which number is 2?
      </label>
      <div
        class="_dropdown_bb73c6 _fullWidth_bb73c6"
      >
        <select
          aria-required="true"
          class="_select_bb73c6"
          id="1235"
          name="key1"
        >
          <option
            class="_option_bb73c6"
            disabled=""
            value=""
          >
            personal_details.select_answer
          </option>
          <option
            class="_option_bb73c6"
            value="1"
          >
            1
          </option>
          <option
            class="_option_bb73c6"
            value="2"
          >
            2
          </option>
          <option
            class="_option_bb73c6"
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        question 1 is invalid
      </div>
    </div>
    <div>
      <div
        class="_header_d50e6e"
      >
        Is this a question?
        <span>
          optional
        </span>
      </div>
      <div
        class="_radio_d50e6e"
      >
        <input
          id="radio_1235_key20"
          name="key2"
          type="radio"
          value="Yes"
        />
        <label
          for="radio_1235_key20"
        >
          Yes
        </label>
      </div>
      <div
        class="_radio_d50e6e"
      >
        <input
          checked=""
          id="radio_1235_key21"
          name="key2"
          type="radio"
          value="No"
        />
        <label
          for="radio_1235_key21"
        >
          No
        </label>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Invalid answer
      </div>
    </div>
    <div
      class="_checkbox_531f07 _error_531f07"
    >
      <div
        class="_header_531f07"
      >
        Check this off.
      </div>
      <div
        class="_row_531f07"
      >
        <input
          aria-required="true"
          checked=""
          id="check-box_1235_ccc"
          name="ccc"
          type="checkbox"
          value="CheckMe"
        />
        <label
          for="check-box_1235_ccc"
        >
          * 
          CheckMe
        </label>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0 _helperTextError_531f07"
      >
        No way Jose
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _continue_8a9484 _primary_f8f296 _fullWidth_f8f296 _large_f8f296"
      type="submit"
    >
      <span>
        personal_details.continue
      </span>
    </button>
  </form>
</div>
`;

exports[`<PersonalDetailsForm> > Renders without crashing 1`] = `
<div>
  <form
    data-testid="personal_details-form"
    novalidate=""
  >
    <h2
      class="_title_8a9484"
    >
      personal_details.title
    </h2>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_firstName"
      >
        personal_details.fist_name
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_firstName"
          name="firstName"
          placeholder="personal_details.fist_name"
          required=""
          type="text"
          value="Vince"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_lastName"
      >
        personal_details.last_name
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_lastName"
          name="lastName"
          placeholder="personal_details.last_name"
          required=""
          type="text"
          value="Guy"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_companyName"
      >
        personal_details.company_name
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_companyName"
          name="companyName"
          placeholder="personal_details.company_name"
          type="text"
          value="JW Player"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_address"
      >
        personal_details.address
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_address"
          name="address"
          placeholder="personal_details.address"
          required=""
          type="text"
          value="123 Nowhere St."
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_address2"
      >
        personal_details.address2
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_address2"
          name="address2"
          placeholder="personal_details.address2"
          type="text"
          value="Apt 1W"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_city"
      >
        personal_details.city
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_city"
          name="city"
          placeholder="personal_details.city"
          required=""
          type="text"
          value="Chicago"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_state"
      >
        personal_details.state
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_state"
          name="state"
          placeholder="personal_details.state"
          required=""
          type="text"
          value="IL"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_postCode"
      >
        personal_details.post_code
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_postCode"
          name="postCode"
          placeholder="personal_details.post_code"
          required=""
          type="text"
          value="60601"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_phoneNumber"
      >
        personal_details.phone_number
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_phoneNumber"
          name="phoneNumber"
          placeholder="personal_details.phone_number"
          required=""
          type="text"
          value="+1 555 555 5555"
        />
      </div>
    </div>
    <div
      class="_dateField_eb6974"
    >
      <label
        class="_label_eb6974"
        for="text-field_1235_birthDate"
      >
        personal_details.birth_date
      </label>
      <div
        class="_container_eb6974"
      >
        <input
          class="_input_eb6974"
          id="text-field_1235_birthDate"
          maxlength="2"
          name="date"
          placeholder="dd"
          type="number"
          value="27"
        />
         / 
        <input
          class="_input_eb6974"
          id="text-field_1235_birthDate"
          maxlength="2"
          name="month"
          placeholder="mm"
          type="number"
          value="2"
        />
         / 
        <input
          class="_input_eb6974"
          id="text-field_1235_birthDate"
          maxlength="4"
          name="year"
          placeholder="yyyy"
          type="number"
          value="1985"
        />
      </div>
    </div>
    <div
      class="_container_bb73c6 _fullWidth_bb73c6 _medium_bb73c6"
    >
      <label
        class="_label_bb73c6"
        for="1235"
      >
        Which number is 2?
      </label>
      <div
        class="_dropdown_bb73c6 _fullWidth_bb73c6"
      >
        <select
          aria-required="true"
          class="_select_bb73c6"
          id="1235"
          name="key1"
        >
          <option
            class="_option_bb73c6"
            disabled=""
            value=""
          >
            personal_details.select_answer
          </option>
          <option
            class="_option_bb73c6"
            value="1"
          >
            1
          </option>
          <option
            class="_option_bb73c6"
            value="2"
          >
            2
          </option>
          <option
            class="_option_bb73c6"
            value="3"
          >
            3
          </option>
        </select>
      </div>
    </div>
    <div>
      <div
        class="_header_d50e6e"
      >
        Is this a question?
        <span>
          optional
        </span>
      </div>
      <div
        class="_radio_d50e6e"
      >
        <input
          id="radio_1235_key20"
          name="key2"
          type="radio"
          value="Yes"
        />
        <label
          for="radio_1235_key20"
        >
          Yes
        </label>
      </div>
      <div
        class="_radio_d50e6e"
      >
        <input
          checked=""
          id="radio_1235_key21"
          name="key2"
          type="radio"
          value="No"
        />
        <label
          for="radio_1235_key21"
        >
          No
        </label>
      </div>
    </div>
    <div
      class="_checkbox_531f07"
    >
      <div
        class="_header_531f07"
      >
        Check this off.
      </div>
      <div
        class="_row_531f07"
      >
        <input
          aria-required="true"
          checked=""
          id="check-box_1235_ccc"
          name="ccc"
          type="checkbox"
          value="CheckMe"
        />
        <label
          for="check-box_1235_ccc"
        >
          * 
          CheckMe
        </label>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _continue_8a9484 _primary_f8f296 _fullWidth_f8f296 _large_f8f296"
      type="submit"
    >
      <span>
        personal_details.continue
      </span>
    </button>
  </form>
</div>
`;
